--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -238,7 +238,7 @@
     <div class="auth-wrapper">
         <div class="auth-header">
             <div class="ss-logo">
-                <img src="../assets/ChatGPT Image May 17, 2025, 03_10_49 PM.png" alt="Super Secret Logo">
+                <img src="../../assets/ChatGPT Image May 17, 2025, 03_10_49 PM.png" alt="Super Secret Logo">
             </div>
             <h3 class="auth-header-title">Super Secret</h3>
         </div>
