--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -81,6 +81,32 @@
         </div>
     </div>
 
+    <!-- Chat Window -->
+    <div class="chat-window" id="chatWindow">
+        <div class="chat-header" id="chatHeader">
+            <div class="chat-user-info">
+                <div class="chat-avatar">
+                    <img id="chatUserAvatar" src="" alt="Chat User Avatar">
+                </div>
+                <span id="chatUserName"></span>
+            </div>
+            <div class="chat-controls">
+                <button class="btn-minimize"><i class="fas fa-window-minimize"></i></button>
+                <button class="btn-maximize"><i class="fas fa-window-maximize"></i></button>
+                <button class="btn-close"><i class="fas fa-times"></i></button>
+            </div>
+        </div>
+        <div class="chat-body">
+            <div class="chat-messages" id="chatMessages">
+                <!-- Messages will be populated by JS -->
+            </div>
+            <div class="chat-input-area">
+                <input type="text" id="chatInput" placeholder="Mesajınızı yazın...">
+                <button class="btn-send"><i class="fas fa-paper-plane"></i></button>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
