chat kismi duzeltildi

--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -15,6 +15,9 @@
 <body>
     <canvas id="networkCanvas"></canvas>
     
+    <!-- Blur overlay -->
+    <div class="blur-overlay" id="blurOverlay"></div>
+    
     <div class="dashboard-container">
         <header>
             <div class="header-logo">
