bağlantı hatası mesajı düzeldi

--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -74,7 +74,7 @@
                         <img id="busyUserAvatar" src="" alt="Busy User Avatar">
                     </div>
                     <p>
-                        <span id="busyUserName"></span> kullanıcısı meşgul. Lütfen sonra tekrar deneyiniz.
+                        <span id="busyUserName"></span> kullanıcısı başka bir kullanıcı ile zihinsel bağlantıda. Lütfen sonra tekrar deneyiniz.
                     </p>
                 </div>
                 <div class="request-actions">
