--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -57,6 +57,11 @@
                     <button class="btn-request-accept">Bağlantı Kur</button>
                     <button class="btn-request-cancel">İptal</button>
                 </div>
+                <!-- Loading Animation Container -->
+                <div class="loading-container" style="display: none;">
+                    <div class="loading-spinner"></div>
+                    <p class="loading-text">Zihin bağlantısı isteği gönderildi...</p>
+                </div>
             </div>
         </div>
     </div>
