--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -21,7 +21,7 @@
     <div class="dashboard-container">
         <header>
             <div class="header-logo">
-                <img src="../../assets/ChatGPT Image May 17, 2025, 03_10_49 PM.png" alt="Super Secret Logo">
+                <img src="../../assets/logo.png" alt="Super Secret Logo">
                 <h1>Super Secret</h1>
             </div>
             <div class="user-info">
