--- a/frontend/dashboard/index.html
+++ b/frontend/dashboard/index.html
@@ -99,16 +99,16 @@
                 <span id="chatUserName"></span>
             </div>
             <div class="chat-controls">
-                <button class="btn-close"><i class="fas fa-times"></i></button>
+                <button class="btn-close">&times;</button>
             </div>
         </div>
         <div class="chat-body">
-            <div class="chat-messages" id="chatMessages">
-                <!-- Messages will be populated by JS -->
-            </div>
+            <div class="chat-messages" id="chatMessages"></div>
             <div class="chat-input-area">
                 <input type="text" id="chatInput" placeholder="Mesajınızı yazın...">
-                <button class="btn-send"><i class="fas fa-paper-plane"></i></button>
+                <button class="btn-send">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
             </div>
         </div>
     </div>
